--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,9 @@
     <title>cfgram</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <navbar></navbar>
+    </header>
     <main>
       <ui-view></ui-view>
     </main>
