--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,8 @@
     <main>
       <ui-view></ui-view>
     </main>
-    <footer></footer>
+    <footer>
+      <!-- <social-icons title="social icons title"></social-icons> -->
+    </footer>
   </body>
 </html>
