sprite added to footer

--- a/app/directive/social-icons/social-icons.html
+++ b/app/directive/social-icons/social-icons.html
@@ -1,8 +1,9 @@
-<nav>
+<section class="all-icons">
+  <div class="copyright">
+  <img src="../../assets/img/cf-logo.png">
   <h2>{{ socialIconsCtrl.title }}</h2>
-  <ul>
-    <li class="social-icons" ng-repeat="icon in socialIconsCtrl.icons">
-      {{ icon }}
-    </li>
-  </ul>
-</nav>
+  </div>
+    <ul>
+      <li class="social-icon" ng-repeat="icon in socialIconsCtrl.icons"></li>
+    </ul>
+</section>
