--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
       <ui-view></ui-view>
     </main>
     <footer>
-      <!-- <social-icons title="social icons title"></social-icons> -->
+      <social-icons title="&copy;"></social-icons>
     </footer>
   </body>
 </html>
