added filters to footer and ordered galleries by name

--- a/app/directive/social-icons/social-icons.html
+++ b/app/directive/social-icons/social-icons.html
@@ -1,7 +1,7 @@
 <section class="all-icons">
   <div class="copyright">
   <img src="../../assets/img/cf-logo.png">
-  <h2>{{ socialIconsCtrl.title }}</h2>
+  <h2>{{ socialIconsCtrl.title | uppercase }}</h2>
   </div>
     <ul>
       <li class="social-icon" ng-repeat="icon in socialIconsCtrl.icons"></li>
